--- a/src/Assets/Default/UI/Form.html
+++ b/src/Assets/Default/UI/Form.html
@@ -1,4 +1,4 @@
-<form id="form" method="post" class="form-vertical" action="<k>Action</k>" enctype="multipart/form-data">
+<form id="form" method="post" class="form-vertical" action="<k>Action</k>" enctype="multipart/form-data" autocomplete="on">
     <place>Message</place>
     <input type="hidden" name="BackURL" value="<call>Request.BackURL</call>" />
 
