--- a/src/Assets/Default/UI/Form/WYSIWYG.html
+++ b/src/Assets/Default/UI/Form/WYSIWYG.html
@@ -1,24 +1,108 @@
-<js>wysihtml5</js>
-<css>bootstrap-wysihtml5</css>
-<js>bootstrap-wysihtml5</js>
+<js>jquery.hotkeys</js>
+<css>bootstrap-wysiwyg</css>
+<js>bootstrap-wysiwyg</js>
+<css>font-awesome:min</css>
 <div class="control-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l> :</label>
-    <div class="controls">
-        <textarea id="<k>Name</k>" class="wysiwyg span12" name="<k>Name</k>" <block>required="<k>Required</k>"</block>>
-            <k>Value</k>
-        </textarea>
+    <label class="control-label" for="<k>Name</k>">
+        <l><k>Label</k></l>
+        :</label>
+
+    <div class="btn-toolbar" data-role="editor-toolbar" data-target="#<k>ID</k>">
+        <div class="btn-group">
+            <a class="btn dropdown-toggle" data-toggle="dropdown" title="" data-original-title="Font"><i
+                    class="icon-font"></i><b class="caret"></b></a>
+            <ul class="dropdown-menu">
+                <li><a data-edit="fontName Serif" style="font-family:'Serif'">Serif</a></li>
+                <li><a data-edit="fontName Sans" style="font-family:'Sans'">Sans</a></li>
+                <li><a data-edit="fontName Arial" style="font-family:'Arial'">Arial</a></li>
+                <li><a data-edit="fontName Arial Black" style="font-family:'Arial Black'">Arial Black</a></li>
+                <li><a data-edit="fontName Courier" style="font-family:'Courier'">Courier</a></li>
+                <li><a data-edit="fontName Courier New" style="font-family:'Courier New'">Courier New</a></li>
+                <li><a data-edit="fontName Comic Sans MS" style="font-family:'Comic Sans MS'">Comic Sans MS</a></li>
+                <li><a data-edit="fontName Helvetica" style="font-family:'Helvetica'">Helvetica</a></li>
+                <li><a data-edit="fontName Impact" style="font-family:'Impact'">Impact</a></li>
+                <li><a data-edit="fontName Lucida Grande" style="font-family:'Lucida Grande'">Lucida Grande</a></li>
+                <li><a data-edit="fontName Lucida Sans" style="font-family:'Lucida Sans'">Lucida Sans</a></li>
+                <li><a data-edit="fontName Tahoma" style="font-family:'Tahoma'">Tahoma</a></li>
+                <li><a data-edit="fontName Times" style="font-family:'Times'">Times</a></li>
+                <li><a data-edit="fontName Times New Roman" style="font-family:'Times New Roman'">Times New Roman</a>
+                </li>
+                <li><a data-edit="fontName Verdana" style="font-family:'Verdana'">Verdana</a></li>
+            </ul>
+        </div>
+        <div class="btn-group">
+            <a class="btn dropdown-toggle" data-toggle="dropdown" title="" data-original-title="Font Size"><i
+                    class="icon-text-height"></i>&nbsp;<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+                <li><a data-edit="fontSize 5"><font size="5">Huge</font></a></li>
+                <li><a data-edit="fontSize 3"><font size="3">Normal</font></a></li>
+                <li><a data-edit="fontSize 1"><font size="1">Small</font></a></li>
+            </ul>
+        </div>
+        <div class="btn-group">
+            <a class="btn" data-edit="bold" title="" data-original-title="Bold (Ctrl/Cmd+B)"><i
+                    class="icon-bold"></i></a>
+            <a class="btn" data-edit="italic" title="" data-original-title="Italic (Ctrl/Cmd+I)"><i
+                    class="icon-italic"></i></a>
+            <a class="btn" data-edit="strikethrough" title="" data-original-title="Strikethrough"><i
+                    class="icon-strikethrough"></i></a>
+            <a class="btn" data-edit="underline" title="" data-original-title="Underline (Ctrl/Cmd+U)"><i
+                    class="icon-underline"></i></a>
+        </div>
+        <div class="btn-group">
+            <a class="btn" data-edit="insertunorderedlist" title="" data-original-title="Bullet list"><i
+                    class="icon-list-ul"></i></a>
+            <a class="btn btn-info" data-edit="insertorderedlist" title="" data-original-title="Number list"><i
+                    class="icon-list-ol"></i></a>
+            <a class="btn" data-edit="outdent" title="" data-original-title="Reduce indent (Shift+Tab)"><i
+                    class="icon-indent-left"></i></a>
+            <a class="btn" data-edit="indent" title="" data-original-title="Indent (Tab)"><i
+                    class="icon-indent-right"></i></a>
+        </div>
+        <div class="btn-group">
+            <a class="btn btn-info" data-edit="justifyleft" title="" data-original-title="Align Left (Ctrl/Cmd+L)"><i
+                    class="icon-align-left"></i></a>
+            <a class="btn" data-edit="justifycenter" title="" data-original-title="Center (Ctrl/Cmd+E)"><i
+                    class="icon-align-center"></i></a>
+            <a class="btn" data-edit="justifyright" title="" data-original-title="Align Right (Ctrl/Cmd+R)"><i
+                    class="icon-align-right"></i></a>
+            <a class="btn" data-edit="justifyfull" title="" data-original-title="Justify (Ctrl/Cmd+J)"><i
+                    class="icon-align-justify"></i></a>
+        </div>
+        <div class="btn-group">
+            <a class="btn dropdown-toggle" data-toggle="dropdown" title="" data-original-title="Hyperlink"><i
+                    class="icon-link"></i></a>
+
+            <div class="dropdown-menu input-append">
+                <input class="span2" placeholder="URL" type="text" data-edit="createLink">
+                <button class="btn" type="button">Add</button>
+            </div>
+            <a class="btn" data-edit="unlink" title="" data-original-title="Remove Hyperlink"><i
+                    class="icon-cut"></i></a>
+
+        </div>
+
+        <div class="btn-group">
+            <a class="btn" title="" id="pictureBtn" data-original-title="Insert picture (or just drag &amp; drop)"><i
+                    class="icon-picture"></i></a>
+            <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage"
+                   style="opacity: 0; position: absolute; top: 0px; left: 0px; width: 34px; height: 30px;">
+        </div>
+        <div class="btn-group">
+            <a class="btn" data-edit="undo" title="" data-original-title="Undo (Ctrl/Cmd+Z)"><i
+                    class="icon-undo"></i></a>
+            <a class="btn" data-edit="redo" title="" data-original-title="Redo (Ctrl/Cmd+Y)"><i class="icon-repeat"></i></a>
+        </div>
+        <input type="text" data-edit="inserttext" id="voiceBtn" x-webkit-speech="">
     </div>
+    <div class="editor" id="<k>ID</k>">
+        <k>Value</k>
+    </div>
+    <input type="hidden" name="<k>Name</k>" id="hd<k>ID</k>" value="<k>Value</k>" />
 </div>
 <jsrun>
-    $(function()
-    {
-        $('.wysiwyg').wysihtml5({
-            "font-styles": false, //Font styling, e.g. h1, h2, etc. Default true
-            "emphasis": true, //Italics, bold, etc. Default true
-            "lists": false, //(Un)ordered lists, e.g. Bullets, Numbers. Default true
-            "html": false, //Button which allows you to edit the generated HTML. Default false
-            "link": true, //Button to insert a link. Default true,
-            "image": true //Button to insert an image. Default true
-        });
+    $('#<k>ID</k>').wysiwyg();
+    $('form').submit(function() {
+        $('#hd<k>ID</k>').val($('#<k>ID</k>').html())
     });
 </jsrun>
