--- a/src/Assets/User/Show/Cabinet.html
+++ b/src/Assets/User/Show/Cabinet.html
@@ -2,6 +2,9 @@
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><k>EMail</k><b class="caret"></b></a>
         <ul class="dropdown-menu">
+            <access Service="Control.Panel" method="Do">
+                <li><a href="/control">ЦУП</a></li>
+            </access>
             <li><a href="/profile">Профиль</a></li>
             <li><a href="/logout">Выход</a></li>
         </ul>
