--- a/src/Assets/Default/UI/Form/WYSIWYG.html
+++ b/src/Assets/Default/UI/Form/WYSIWYG.html
@@ -4,8 +4,7 @@
 <css>font-awesome:min</css>
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>">
-        <l><k>Label</k></l>
-        :</label>
+        <l><k>Label</k></l>:</label>
 
     <div class="btn-toolbar" data-role="editor-toolbar" data-target="#<k>ID</k>">
         <div class="btn-group">
