--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -10,10 +10,12 @@
         <div class="pull-left">
             <breadcrumbs/>
         </div>
-        <exec>
-            <Service>User.Cabinet</Service>
-            <Method>Do</Method>
-        </exec>
+        <div class="pull-right">
+            <exec>
+                <Service>User.Cabinet</Service>
+                <Method>Do</Method>
+            </exec>
+        </div>
     </div>
 </div>
 
