--- a/src/Assets/Project/Zone.html
+++ b/src/Assets/Project/Zone.html
@@ -1,3 +1,6 @@
+<breadcrumb href="/"><call>Project.Title</call></breadcrumb>
+<subtitle><call>Project.Title</call></subtitle>
+
 <div id="container">
     <div class="navbar">
         <div class="navbar-inner">
