Freedom Restrictions Support.

--- a/src/Assets/Errors/451.html
+++ b/src/Assets/Errors/451.html
@@ -1,10 +1,9 @@
-<h2>Ошибка 451</h2>
+<h2 class="page-header">Ошибка 451</h2>
 
 <h3>Что случилось?</h3>
 Эта страница запрещена правительством вашей страны.
 <hr/>
 
-<h3>Что делать?</h3>
-Можно попробовать эммигрировать.
+<h3><a href="http://rublacklist.net/bypass/">Что делать?</a></h3>
 
 <small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
