--- a/src/Assets/User/Activation/Success.html
+++ b/src/Assets/User/Activation/Success.html
@@ -1,13 +1,7 @@
-<div class="content">
-    <div class="header">
-        <h3>Активация прошла успешно</h3>
-    </div>
-    <div class="page-content">
-        <div class="row-fluid">
-            <div class="span12 activation-block">
-                <a href="/login" class="btn btn-success btn-large">Перейти к авторизиации</a>
-                <place>Content</place>
-            </div>
-        </div>
+<h2 class="page-header">Активация прошла успешно</h2>
+<div class="row-fluid">
+    <div class="span12">
+        <a href="/login" class="btn btn-success btn-large">Перейти к авторизации</a>
+        <place>Content</place>
     </div>
 </div>
