--- a/src/Assets/User/Show/Cabinet.html
+++ b/src/Assets/User/Show/Cabinet.html
@@ -5,7 +5,8 @@
             <access Service="Control.Panel" method="Do">
                 <li><a href="/control">ЦУП</a></li>
             </access>
-            <li><a href="/profile">Профиль</a></li>
+            <li><a href="/user/<k>ID</k>">Профиль</a></li>
+            <li><a href="/profile">Редактировать</a></li>
             <li><a href="/logout">Выход</a></li>
         </ul>
     </li>
