Benchmarks, mongo upsert, fixes.

--- a/src/Assets/Server/Control/Do.html
+++ b/src/Assets/Server/Control/Do.html
@@ -1,1 +1,8 @@
-<place>Content</place>
+<h3><l>Server.Control:System</l></h3>
+<pre>
+    <place>System</place>
+</pre>
+<h3><l>Server.Control:CPU</l></h3>
+<pre>
+    <place>CPU</place>
+</pre>
