--- a/src/Assets/Session/Control/Table.html
+++ b/src/Assets/Session/Control/Table.html
@@ -1,11 +1,10 @@
 <table class="table table-condensed table-striped">
     <tr>
         <th><l>Session.Entity:Created</l></th>
-        <th><l>Session.Entity:User</l></th>
         <th><l>Session.Entity:Expire</l></th>
-        <th><l>Session.Entity:IP.Start</l></th>
-        <th><l>Session.Entity:IP.Current</l></th>
         <th><l>Session.Entity:Heartbeat</l></th>
+        <th><l>Session.Entity:IP</l></th>
+        <th><l>Session.Entity:User</l></th>
         <th><l>Session.Control:Actions</l></th>
     </tr>
     <place>Content</place>
