--- a/src/Assets/Session/Control/Show/Short.html
+++ b/src/Assets/Session/Control/Show/Short.html
@@ -3,18 +3,21 @@
         <datetime format="H:i:s d.m.Y"><k>Created</k></datetime>
     </td>
     <td>
+        <datetime format="H:i:s d.m.Y"><k>Expire</k></datetime>
+    </td>
+    <td><datetime format="H:i:s d.m.Y"><k>Heartbeat</k></datetime></td>
+    <td>
+        <k>IP</k>
+    </td>
+    <td>
         <entity>User:<k>User</k></entity>
     </td>
     <td>
-        <datetime format="H:i:s d.m.Y"><k>Expire</k></datetime>
+        <if value="<k>ID</k>" eq="<call>SID</call>">
+            Ваша сессия
+        </if>
+        <if value="<k>ID</k>" neq="<call>SID</call>">
+            <a href="/control/Session/Delete/<k>ID</k>"><l>Session.Control:Annulate</l></a>
+        </if>
     </td>
-    <td>
-        <k>IP.Start</k>
-    </td>
-    <td>
-        <k>IP.Current</k>
-    </td>
-    <td><datetime format="H:i:s d.m.Y"><k>Heartbeat</k></datetime></td>
-    <td><a href="/control/Session/Delete/<k>ID</k>"><l>Session.Control:Annulate</l></a> </td>
-
 </tr>
