--- a/src/Assets/Server/Control/Benchmark.html
+++ b/src/Assets/Server/Control/Benchmark.html
@@ -9,5 +9,5 @@
 <place>Results</place>
 
 <div class="alert alert-info">
-    <sup>*</sup> среди Codeine-инсталляций.
+    <sup>*</sup> среди <place>Total</place> Codeine-инсталляций.
 </div>
