--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -25,6 +25,7 @@
     </div>
     <div class="span9">
         <div class="hidden-print"><place>Sidebar</place></div>
+        <div class="clearfix spaced"></div>
         <place>Content</place>
     </div>
 </div>
