--- a/src/Assets/Default/UI/Form/Select.html
+++ b/src/Assets/Default/UI/Form/Select.html
@@ -2,7 +2,7 @@
     <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l>:
 </label>
     <div class="controls">
-        <select id="<k>ID</k>"  <block>multiple=<k>Multiple</k></block> name="<k>Name</k>" <block>required="<k>Required</k>" </block> size="<k>Size</k>">
+        <select id="<k>ID</k>"  <block>multiple=<k>Multiple</k></block> name="<k>Name</k>" <block>required="<k>Required</k>" </block> size="<k>Size</k>" class="span12">
             <k>Options</k>
         </select>
     </div>
