--- a/src/Assets/Control/Zone.html
+++ b/src/Assets/Control/Zone.html
@@ -1,3 +1,3 @@
-<div class="container-fluid">
-    <place>Content</place>
-</div>
+<link href='http://fonts.googleapis.com/css?family=Roboto&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+<css>Control</css>
+<place>Content</place>
