--- a/src/Assets/User/Show/Tag.html
+++ b/src/Assets/User/Show/Tag.html
@@ -1,1 +1,1 @@
-<img class="icon" src="/img/icons/Control/User.png" width=16 height=16 alt="Пользователь"/>  <a href="/user/<k>ID</k>"> <k>Fullname</k></a>
+<a href="/user/<k>ID</k>"><k>Fullname</k></a>
