--- a/src/Assets/Article/Control/Show/Short.html
+++ b/src/Assets/Article/Control/Show/Short.html
@@ -1,9 +1,6 @@
 <tr><td>
     <div class="pull-right">
-        <ul class="nav nav-pills">
-            <li><a href="/control/<call>Entity</call>/Update/<k>ID</k>"> <l><call>Entity</call>.Control:Options.Update</l></a></li>
-            <li><a href="/control/<call>Entity</call>/Delete/<k>ID</k>"> <l><call>Entity</call>.Control:Options.Delete</l> </a></li>
-        </ul>
+        <layout>Control.Pills:RUD</layout>
     </div>
     <a href="/control/<call>Entity</call>/Show/<k>ID</k>"><h4><k>Title</k></h4></a>
     <h5>/<k>Slug</k></h5>
