--- a/src/Assets/Block/Control/Show/Short.html
+++ b/src/Assets/Block/Control/Show/Short.html
@@ -1,10 +1,7 @@
 <tr>
     <td>
         <div class="pull-right">
-            <ul class="nav nav-pills">
-                <li><a href="/control/<call>Entity</call>/Update/<k>ID</k>">Редактировать</a></li>
-                <li><a href="/control/<call>Entity</call>/Delete/<k>ID</k>">Удалить</a></li>
-            </ul>
+            <layout>Control.Pills:RUD</layout>
         </div>
         <h4><k>Title</k></h4>
     </td>
