--- a/src/Assets/SEO/Control/Do.html
+++ b/src/Assets/SEO/Control/Do.html
@@ -1,1 +1,9 @@
+<a href="http://pr-cy.ru/a/www.medgreat.com" target="_blank">
+    <img src="http://s.pr-cy.ru/counters/medgreat.com" alt="Счетчик PR-CY.Rank">
+</a>
+
+<a href="http://pr-cy.ru/a/www.medgreat.com" target="_blank">
+    <img src="http://counter.pr-cy.ru/prcy/www.medgreat.com" alt="Счетчик PR-CY.Rank">
+</a>
+
 <place>Content</place>
