--- a/src/Assets/User/Show/Cabinet.html
+++ b/src/Assets/User/Show/Cabinet.html
@@ -1,6 +1,6 @@
 <ul class="nav pull-right">
     <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><k>EMail</k><b class="caret"></b></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><k>Fullname</k><b class="caret"></b></a>
         <ul class="dropdown-menu">
             <access Service="Control.Panel" method="Do">
                 <li><a href="/control">ЦУП</a></li>
