--- a/src/Assets/User/Show/Cabinet.html
+++ b/src/Assets/User/Show/Cabinet.html
@@ -1,10 +1,12 @@
 <ul class="nav pull-right">
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <image>
-                <Source>Security.Auth:<k>External</k>.png</Source>
-                <Width>16</Width>
-            </image>
+            <block>
+                <image>
+                    <Source>Security/Auth:vk.com.png</Source>
+                    <Width>16</Width>
+                </image>
+            </block>
             <k>Fullname</k>
             <b class="caret"></b></a>
         <ul class="dropdown-menu">
