--- a/src/Assets/User/Show/Cabinet.html
+++ b/src/Assets/User/Show/Cabinet.html
@@ -3,7 +3,7 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <block>
                 <image>
-                    <Source>Security/Auth:vk.com.png</Source>
+                    <Source>Security/Auth:<k>External</k>.png</Source>
                     <Width>16</Width>
                 </image>
             </block>
