--- a/src/Assets/Control/Pills/MRUD.html
+++ b/src/Assets/Control/Pills/MRUD.html
@@ -1,4 +1,10 @@
 <div class="nav nav-pills">
+    <li>
+        <a href="/control/<call>Entity</call>/Accept/<k>ID</k>"><l><call>Entity</call>.Control:Options.Accept</l></a>
+    </li>
+    <li>
+        <a href="/control/<call>Entity</call>/Reject/<k>ID</k>"><l><call>Entity</call>.Control:Options.Reject</l></a>
+    </li>
     <access Service="Entity.Show.Static" Method="Do" Call.Entity="<call>Entity</call>">
         <li>
             <a href="/control/<call>Entity</call>/Show/<k>ID</k>"><l><call>Entity</call>.Control:Options.Show</l></a>
