Bugfixes. VK Support.

--- a/src/Assets/Project/About.html
+++ b/src/Assets/Project/About.html
@@ -16,5 +16,5 @@
 </div>
 
 <div class="well">
-    Все права соблюдены. <a href="http://<call>Project.Hosts.Production</call>"><call>Project.Copyright.Rights</call></a>, <call>Project.Copyright.Year</call>
+    Все права соблюдены. <br/><a href="http://<call>Project.Hosts.Production</call>"><call>Project.Copyright.Rights</call></a>, <call>Project.Copyright.Year</call>
 </div>
