--- a/src/Assets/bootstrap/Widgets/Thumbs/Normal.html
+++ b/src/Assets/bootstrap/Widgets/Thumbs/Normal.html
@@ -1,1 +1,1 @@
-<img class="thumbnail" width="<k>Width</k>" height="<k>Height</k>" src="<k>URL</k>" alt="<k>Alt</k>"/>
+<img class="<k>Class</k>" width="<k>Width</k>" height="<k>Height</k>" src="<k>URL</k>" alt="<k>Alt</k>"/>
