Fixes. File Parslet. Filesize Convertor.

--- a/src/Assets/User/Show/Cabinet.html
+++ b/src/Assets/User/Show/Cabinet.html
@@ -10,7 +10,7 @@
             <k>Fullname</k>
             <b class="caret"></b></a>
         <ul class="dropdown-menu">
-            <access Service="Control.Panel" method="Do">
+            <access Service="Control.Panel" Method="Do">
                 <li><a href="/control">ЦУП</a></li>
             </access>
             <li><a href="/user/<k>ID</k>">Профиль</a></li>
