--- a/src/Assets/bootstrap/Widgets/Form/File.html
+++ b/src/Assets/bootstrap/Widgets/Form/File.html
@@ -11,8 +11,9 @@
 
             <if value="<k>Value</k>" neq="0">
                 <small>
+                    <file>/uploads/<k>Scope</k>/<k>Value</k></file>
                     <label class="checkbox">
-                        <input type="checkbox" name="<k>Name</k>" value="-1" /> Удалить <k>Value</k>
+                        <input type="checkbox" name="<k>Name</k>" value="-1" /> Удалить
                     </label>
                 </small>
             </if>
