--- a/src/Assets/User/Activation/EMail.html
+++ b/src/Assets/User/Activation/EMail.html
@@ -1,7 +1,7 @@
-<h2>Приветствуем, <k>Fullname</k>!</h2>
+<h1>Приветствуем, <k>Data.Fullname</k>!</h1>
 
 <p>Вы успешно зарегистрировались в проекте <strong><a href="<k>Host</k>"><k>Project.Title</k></a></strong>.</p>
 
-<div style="margin-bottom: 4px;"><a target="_blank" href="<k>ActivationURL</k>">Щелкните для активации</a></div>
+<div style="margin-bottom: 4px;"><a target="_blank" href="<k>URLActivation</k>">Щелкните для активации</a></div>
 <strong>или</strong>
-<div style="margin-top: 4px;">Скопируйте эту ссылку в окно браузера: <k>ActivationURL</k></div>
+<div style="margin-top: 4px;">Скопируйте эту ссылку в окно браузера: <k>URLActivation</k></div>
