--- a/src/Assets/User/Incorrect.html
+++ b/src/Assets/User/Incorrect.html
@@ -1,9 +1,6 @@
 <h2>Логин или пароль неверны</h2>
 
 <div class="spaced">
-    <p>
-        <a class="btn" href="/login">Попробовать ещё раз</a>
-        <a class="btn btn-success" href="/forgot">Забыли пароль?</a>
-    </p>
-
+    <a href="/login">Попробовать ещё раз</a>
+    <a href="/forgot">Забыли пароль?</a>
 </div>
