--- a/src/Assets/User/Activation/Failure.html
+++ b/src/Assets/User/Activation/Failure.html
@@ -1,10 +1,6 @@
-<div class="content">
-    <div class="header">
-        <h2>Активация не удалась</h2>
-    </div>
-    <div class="row-fluid">
-        <div class="span12">
-            <place>Content</place>
-        </div>
-    </div>
-</div>
+<subtitle>Активация не удалась</subtitle>
+<breadcrumb href="/activation/failure">Активация не удалась</breadcrumb>
+
+<h2 class="page-header">Активация не удалась</h2>
+
+<place>Content</place>
