--- a/src/Assets/User/Activation/Needed.html
+++ b/src/Assets/User/Activation/Needed.html
@@ -1,30 +1,20 @@
-<div class="content">
-    <div class="header">
-        <h2>Вы успешно прошли первый этап регистрации.</h2>
+<subtitle>Необходима активация</subtitle>
+<breadcrumb href="/activation/needed">Необходима активация</breadcrumb>
+
+<h2 class="page-header">Вы успешно прошли первый этап регистрации.</h2>
+
+<div class="row-fluid">
+    <div class="span6">
+        <div class="spaced">
+            На ящик <strong><k>EMail</k></strong> выслано письмо с инструкциями. <br/>
+            Пожалуйста, проследуйте по указанной в письме ссылке, в течении 24 часов для активации вашего аккаунта.
+        </div>
     </div>
 
-    <div class="activation-block">
-        <div class="row-fluid">
-            <div class="span6">
-                <place>Message</place>
-            </div>
-        </div>
-        <div class="row-fluid">
-            <div class="span6">
-                <div class="spaced">
-                    На ящик <strong><k>EMail</k></strong> выслано письмо с инструкциями. <br/>
-                    Пожалуйста, проследуйте по указанной в письме ссылке, в течении 24 часов для активации вашего аккаунта.
-                </div>
-            </div>
+    <div class="span6">
+        <img src="http://<k>Server</k>/favicon.ico" width="16" height="16"/> <a class="header3" href="http://<k>Server</k>">Перейти
+        на <k>Server</k></a><br/>
 
-            <div class="span6">
-                <img src="http://<k>Server</k>/favicon.ico" width="16" height="16"/> <a class="header3" href="http://<k>Server</k>">Перейти
-                на <k>Server</k></a><br/>
-
-                <a class="header3" href="/mail/user/<k>ID</k>">Выслать активационный код еще раз</a>
-            </div>
-        </div>
-
-
+        <a class="header3" href="/mail/user/<k>ID</k>">Выслать активационный код еще раз</a>
     </div>
 </div>
