--- a/src/Assets/bootstrap/Widgets/Navlist.html
+++ b/src/Assets/bootstrap/Widgets/Navlist.html
@@ -1,6 +1,3 @@
-<ul class="nav nav-list">
-  <li class="nav-header">
-    <k>Header</k>
-  </li>
-<k>Value</k>
+<ul class="nav nav-pills nav-stacked">
+    <k>Value</k>
 </ul>
