--- a/src/Assets/bootstrap/Widgets/Navlist/Passive.html
+++ b/src/Assets/bootstrap/Widgets/Navlist/Passive.html
@@ -1,1 +1,11 @@
-<li><a href="<k>URL</k>"><k>Title</k></a></li>
+
+<li>
+    <a href="/control/<k>ID</k>">
+        <image>
+            <Source><k>ID</k>:<k>ID</k>.png</Source>
+            <Width>16</Width>
+        </image>
+        <l><k>ID</k>.Control:Title</l>
+        <block><span class="pull-right"><k>Count</k></span></block>
+    </a>
+</li>
