--- a/src/Assets/bootstrap/Widgets/Form.html
+++ b/src/Assets/bootstrap/Widgets/Form.html
@@ -3,9 +3,10 @@
 
     <place>Form</place>
     <div class="form-actions">
-        <button type="submit" class="btn btn-large btn-success"><l>Entity.Entity:<k>Submit</k></l></button>
+        <button type="submit" class="btn btn-large btn-success">
+            <l><call>Entity</call>.Entity:<call>Purpose</call></l></button>
         <block>
-            <button type="reset" class="btn"><l>Entity.Entity:<k>Reset</k></l></button>
+            <button type="reset" class="btn"><l>.Entity:<k>Reset</k></l></button>
         </block>
     </div>
 </form>
