Article Application, hotfixes

--- a/src/Assets/Article/Author.html
+++ b/src/Assets/Article/Author.html
@@ -1,16 +1,10 @@
-<h2 class="page-header"><l><call>Entity</call>.Control:Title</l></h2>
+<subtitle><far>User:<call>Where.User</call>:Fullname</far></subtitle>
+<breadcrumb href="/articles/category/<call>Where.User</call>"><far>User:<call>Where.User</call>:Fullname</far></breadcrumb>
+<h2 class="page-header">Автор: <far>User:<call>Where.User</call>:Fullname</far></entity></h2>
+
 <div class="row-fluid">
     <div class="span8"><place>Content</place></div>
     <div class="span4">
-        <exec>
-            <Service>Entity.Catalog</Service>
-            <Method>Do</Method>
-            <Call>
-                <Entity>Article</Entity>
-                <Key>Category</Key>
-            </Call>
-        </exec>
-
         <exec>
             <Service>Entity.Catalog</Service>
             <Method>Do</Method>
