--- a/src/Assets/Article/Category.html
+++ b/src/Assets/Article/Category.html
@@ -1,4 +1,7 @@
-<h2 class="page-header"><l><call>Entity</call>.Control:Title</l></h2>
+<subtitle><call>Where.Category</call></subtitle>
+<breadcrumb href="/articles/category/<call>Where.Category</call>"><call>Where.Category</call></breadcrumb>
+<h2 class="page-header"><l>Article.Entity:Category</l>: <call>Where.Category</call></h2>
+
 <div class="row-fluid">
     <div class="span8"><place>Content</place></div>
     <div class="span4">
@@ -8,15 +11,6 @@
             <Call>
                 <Entity>Article</Entity>
                 <Key>Category</Key>
-            </Call>
-        </exec>
-
-        <exec>
-            <Service>Entity.Catalog</Service>
-            <Method>Do</Method>
-            <Call>
-                <Entity>Article</Entity>
-                <Key>User</Key>
             </Call>
         </exec>
     </div>
