--- a/src/Assets/Article/Show/Full.html
+++ b/src/Assets/Article/Show/Full.html
@@ -1,12 +1,41 @@
 <subtitle><k>Title</k></subtitle>
 <description><k>Description</k></description>
 <block><keyword><k>Keywords</k></keyword></block>
+<breadcrumb href="/article/category/<k>Category</k>"><k>Category</k></breadcrumb>
+<breadcrumb href="/article/<k>Slug</k>"><k>Title</k></breadcrumb>
 
-<h2><k>Title</k></h2>
-<article>
-    <k>Body</k>
-</article>
-<hr/>
+<h2 class="page-header"><k>Title</k></h2>
+<div class="row-fluid">
+    <div class="span8">
+        <div class="block">
+            <article>
+                <k>Description</k>
+                <k>Body</k>
+            </article>
 
-<entity>User:<k>User</k></entity>
-<div class="pull-right"><datetime><k>Created</k></datetime></div>
+            <a href="/articles/author/<k>User</k>"><far>User:<k>User</k>:Fullname</far></a>
+
+
+            <div class="pull-right">
+                <datetime><k>Created</k></datetime>
+            </div>
+        </div>
+
+    </div>
+    <div class="span4">
+        <ul class="nav nav-stacked">
+            <li><a class="nav-header" href="/articles/category/<k>Category</k>">Рубрика: <k>Category</k></a></li>
+            <exec>
+                <Service>Entity.List</Service>
+                <Method>Do</Method>
+                <Call>
+                    <Template>Line</Template>
+                    <Entity><call>Entity</call></Entity>
+                    <Where>
+                        <Category><k>Category</k></Category>
+                    </Where>
+                </Call>
+            </exec>
+        </ul>
+    </div>
+</div>
