--- a/src/Assets/Article/Show/Short.html
+++ b/src/Assets/Article/Show/Short.html
@@ -1,3 +1,6 @@
-<div>
-    <a href="/article/<k>Slug</k>"><k>Title</k></a>
+<div class="block">
+    <h3><a href="/article/<k>Slug</k>"><k>Title</k></a></h3>
+    <div>
+        <p><k>Description</k></p>
+    </div>
 </div>
