--- a/src/Assets/bootstrap/Widgets/Navlist/Active.html
+++ b/src/Assets/bootstrap/Widgets/Navlist/Active.html
@@ -2,6 +2,7 @@
     <a href="/control/<k>ID</k>">
         <image>
             <Source><k>ID</k>:<k>ID</k>.png</Source>
+            <Default>Default:application.png</Default>
             <Width>16</Width>
         </image>
         <l><k>ID</k>.Control:Title</l>
