--- a/src/Assets/Default/Main.html
+++ b/src/Assets/Default/Main.html
@@ -21,6 +21,7 @@
     <js>bootstrap:min</js>
 
     <js>Locale:live</js>
+    <js>modernizr</js>
 
     <js>Default:activelink</js>
     <js>Default:ajaxlink</js>
