--- a/src/Assets/Errors/Blocks/403.html
+++ b/src/Assets/Errors/Blocks/403.html
@@ -1,2 +1,2 @@
-<!-- <div class="alert alert-warning">Авторизуйтесь!
-<block><k>Rule.Message</k></block></div> -->
+<div class="alert alert-warning">403
+<block><k>Rule.Message</k></block></div>
