--- a/src/Assets/User/Show/Cabinet.app.html
+++ b/src/Assets/User/Show/Cabinet.app.html
@@ -12,7 +12,7 @@
         <ul class="dropdown-menu">
             <access Service="Control.Panel" Method="Do">
                 <li><a href="/control">ЦУП</a></li>
-            </access>ght
+            </access>
             <li><a href="/user/<k>ID</k>">Профиль</a></li>
             <li><a href="/profile">Редактировать</a></li>
             <li><a href="/logout">Выход</a></li>
