--- a/src/Assets/User/Show/Cabinet.app.html
+++ b/src/Assets/User/Show/Cabinet.app.html
@@ -7,6 +7,12 @@
                     <Width>16</Width>
                 </image>
             </block>
+            <thumb>
+                <Remote><k>Photo</k></Remote>
+                <URL>Public/uploads/user/<k>Photo</k></URL>
+                <Width>24</Width>
+                <Class>img-rounded</Class>
+            </thumb>
             <k>Fullname</k>
             <b class="caret"></b></a>
         <ul class="dropdown-menu">
