--- a/src/Assets/User/Show/Full.html
+++ b/src/Assets/User/Show/Full.html
@@ -1,4 +1,20 @@
-<h1 class="page-header"><k>Fullname</k></h1>
+<subtitle>Пользователи</subtitle>
+<breadcrumb href="/users">Пользователи</breadcrumb>
+
+<subtitle><k>Fullname</k></subtitle>
+<breadcrumb href="/user/<k>ID</k>"><k>Fullname</k></breadcrumb>
+
+<div class="page-header">
+    <img class="img-rounded pull-left" src="<fn>
+                    <Service>Services.Avatar.Gravatar</Service>
+                    <Method>Get</Method>
+                    <Call>
+                        <EMail><k>EMail</k></EMail>
+                    </Call></fn>&amp;s=240" alt="<k>Fullname</k>" title="<k>Fullname</k>" width="120" height="120"/>
+    <h2><k>Fullname</k></h2>
+    <h4><k>Location</k>,  <entity>Country:<k>Country</k></entity></h4>
+    <div class="clearfix"></div>
+</div>
 
 <table class="table table-striped">
     <tr>
@@ -45,4 +61,4 @@
             </td>
         </tr>
     </block>
-</table>s
+</table>
