--- a/src/Assets/User/Update.html
+++ b/src/Assets/User/Update.html
@@ -1,4 +1,9 @@
+<breadcrumb href="/cabinet">Кабинет</breadcrumb>
+<subtitle>Кабинет</subtitle>
+
 <breadcrumb href="/profile">Профиль</breadcrumb>
 <subtitle>Профиль</subtitle>
+
+<h2 class="page-header">Редактирование профиля</h2>
 
 <place>Content</place>
