--- a/src/Assets/bootstrap/Widgets/Form.html
+++ b/src/Assets/bootstrap/Widgets/Form.html
@@ -3,10 +3,13 @@
 
     <place>Form</place>
     <div class="form-actions">
-        <button type="submit" class="btn btn-large btn-success">
-            <l><call>Entity</call>.Entity:<call>Purpose</call></l></button>
+            <button type="submit" class="btn btn-large btn-success">
+                <l><call>Entity</call>.<call>Purpose</call>:Submit</l>
+            </button>
         <block>
-            <button type="reset" class="btn"><l>.Entity:<k>Reset</k></l></button>
+            <button type="reset" class="btn btn-large">
+                <l><call>Entity</call>.<call>Purpose</call>:Reset</l>
+            </button>
         </block>
     </div>
 </form>
