Hide versions, about page.

--- a/src/Assets/Project/About.html
+++ b/src/Assets/Project/About.html
@@ -11,8 +11,8 @@
     Разработка начата: <strong><datetime><call>Project.Events.Started</call></datetime></strong> <br/>
     <block>Запуск проекта: <strong><datetime><call>Project.Events.Released</call></datetime></strong><br/></block>
 
-    Версия <call>Project.Title</call>: <strong><call>Version.Project.Major</call>.<call>Version.Project.Minor</call></strong> <br/>
-    Версия Codeine: <strong><call>Version.Codeine.Major</call>.<call>Version.Codeine.Minor</call></strong>
+    <!--Версия <call>Project.Title</call>: <strong><call>Version.Project.Major</call>.<call>Version.Project.Minor</call></strong> <br/>
+    Версия Codeine: <strong><call>Version.Codeine.Major</call>.<call>Version.Codeine.Minor</call></strong>-->
 </div>
 
 <div class="well">
