--- a/src/Assets/Entity/Delete.html
+++ b/src/Assets/Entity/Delete.html
@@ -1,4 +1,4 @@
-<h2>Вы уверены, что хотите удалить?</h2>
+<h2>Вы уверены, что хотите удалить эти объекты?</h2>
 <form action="" method="post" class="form-vertical">
     <place>Content</place>
 
