--- a/src/Assets/bootstrap/Widgets/Navlist/Passive.html
+++ b/src/Assets/bootstrap/Widgets/Navlist/Passive.html
@@ -1,11 +1,6 @@
 <li>
     <a href="<k>URL</k>">
-        <image>
-            <Source><k>ID</k>:<k>ID</k>.png</Source>
-            <Default>Default:application.png</Default>
-            <Width>16</Width>
-        </image>
+        <block><span class="badge pull-right"><k>Count</k></span></block>
         <k>Title</k>
-        <block><span class="pull-right"><k>Count</k></span></block>
     </a>
 </li>
