--- a/src/Assets/Project/About.html
+++ b/src/Assets/Project/About.html
@@ -16,5 +16,6 @@
 </div>
 
 <div class="well">
-    Все права соблюдены. <br/><a href="http://<call>Project.Hosts.Production</call>"><call>Project.Copyright.Rights</call></a>, <call>Project.Copyright.Year</call>
+    Все права соблюдены. <br/>
+    <a href="http://<call>Project.Hosts.Production</call>"><call>Project.Copyright.Rights</call></a>, <datetime format="Y"></datetime>
 </div>
