--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -34,10 +34,8 @@
 </head>
 
 <body>
-
-<place>Content</place>
-
-<place>JS</place>
-
+    <place>Content</place>
+    <place>JS</place>
+    <logs/>
 </body>
 </html>
