--- a/src/Assets/Security/Auth/System/Password.html
+++ b/src/Assets/Security/Auth/System/Password.html
@@ -1,9 +1,11 @@
-<form method="post" class="form-horizontal" action="/login">
+<form method="post" class="form-vertical" action="/login">
     <div class="control-group">
         <label class="control-label" for="EMail"><l>User.Entity:<call>Determinant</call></l>:</label>
         <div class="controls">
-            <input class="span6" id="Determinant" type="text" name="<call>Determinant</call>" value="" required="required"
-                   autofocus="autofocus"/>
+            <input class="span6" id="Determinant" type="text" name="<call>Determinant</call>" value="" required="required" autofocus="autofocus"/>
+            &nbsp;
+            <a class="register" href="/join">Регистрация</a>
+
         </div>
     </div>
     <div class="control-group">
