Log Channels, Fixes.

--- a/src/Assets/bootstrap/Widgets/Form.html
+++ b/src/Assets/bootstrap/Widgets/Form.html
@@ -1,6 +1,5 @@
 <form id="form" method="post" class="form-vertical" action="<k>Action</k>" enctype="multipart/form-data" autocomplete="on">
-    <input type="hidden" name="BackURL" value="<call>Request.BackURL</call>" />
-
+    <input type="hidden" name="BackURL" value="<k>Request.BackURL</k>" />
     <place>Form</place>
     <div class="form-actions">
         <button type="submit" class="btn btn-large btn-success">
