--- a/src/Assets/bootstrap/Widgets/Navlist/Passive.html
+++ b/src/Assets/bootstrap/Widgets/Navlist/Passive.html
@@ -1,6 +1,6 @@
 <li>
     <a href="<k>URL</k>">
-        <block><span class="badge pull-right"><k>Count</k></span></block>
+        <block><span class="label pull-right"><k>Count</k></span></block>
         <k>Title</k>
     </a>
 </li>
