--- a/src/Assets/bootstrap/Widgets/Navlist/Active.html
+++ b/src/Assets/bootstrap/Widgets/Navlist/Active.html
@@ -1,6 +1,6 @@
 <li class="active">
-    <a href="#">
-        <block><span class="badge pull-right"><k>Count</k></span></block>
+    <a href="<k>URL</k>">
+        <block><span class="label pull-right"><k>Count</k></span></block>
         <k>Title</k>
     </a>
 </li>
