--- a/src/Assets/Control/Pills/MRUD.html
+++ b/src/Assets/Control/Pills/MRUD.html
@@ -20,12 +20,12 @@
         </if>
     </li>
     <li>
-        <a href="/control/<call>Entity</call>/Show/<k>ID</k>"><l><call>Entity</call>.Control:Options.Show</l></a>
+        <a href="/control/<call>Entity</call>/Show/<k>ID</k>"><i class="icon icon-eye-open"></i></a>
     </li>
     <li>
-        <a href="/control/<call>Entity</call>/Update/<k>ID</k>"><l><call>Entity</call>.Control:Options.Update</l></a>
+        <a href="/control/<call>Entity</call>/Update/<k>ID</k>"><i class="icon icon-pencil"></i></a>
     </li>
     <li>
-        <a href="/control/<call>Entity</call>/Delete/<k>ID</k>"><l><call>Entity</call>.Control:Options.Delete</l></a>
+        <a href="/control/<call>Entity</call>/Delete/<k>ID</k>"><i class="icon icon-trash"></i></a>
     </li>
 </div>
