--- a/src/Assets/Entity/Accept.html
+++ b/src/Assets/Entity/Accept.html
@@ -2,9 +2,8 @@
 <form action="" method="post" class="form-vertical">
     <place>Content</place>
 
-    <input type="hidden" name="BackURL" value="<call>Request.BackURL</call>" />
     <div class="form-actions">
-        <button type="submit" class="btn btn-danger">Принять</button>
-        <a href="<call>Request.BackURL</call>" class="btn btn-success">Я передумал</a>
+        <input type="submit" class="btn btn-success" value="Принять" />
+        <a class="btn btn-danger">Я передумал</a>
     </div>
 </form>
