--- a/src/Assets/bootstrap/Widgets/Form/Textfield.html
+++ b/src/Assets/bootstrap/Widgets/Form/Textfield.html
@@ -1,6 +1,7 @@
 <div class="control-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l>: <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if></label>
+    <label class="control-label" for="<k>Name</k>">
+    <l><k>Label</k></l>: <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if></label>
     <div class="controls">
-        <k>HTML</k>
+          <k>HTML</k>
     </div>
 </div>
