File Field fixes.

--- a/src/Assets/bootstrap/Widgets/Form/File.html
+++ b/src/Assets/bootstrap/Widgets/Form/File.html
@@ -9,7 +9,7 @@
         <block>Максимальный размер: <k>MaxSize</k></block>
         <block><br/>Разрешённые типы: <k>TypeHint</k></block>
 
-            <if value="<k>Value</k>" neq="0">
+            <if value="<k>Value</k>" neq="">
                 <div>
                     <small>
                         <file><k>Value</k></file>
