--- a/src/Assets/Control/Pills/Top.html
+++ b/src/Assets/Control/Pills/Top.html
@@ -1,5 +1,8 @@
 <div class="topbar nav nav-pills">
     <li>
+        <a href="/control/<call>Entity</call>/Touch/<k>ID</k>"><i class="icon icon-refresh"></i></a>
+    </li>
+    <li>
         <a href="/control/<call>Entity</call>/Show/<k>ID</k>"><i class="icon icon-eye-open"></i></a>
     </li>
     <li>
