Fixes at login boxes.

--- a/src/Assets/Security/Auth/System/Password.html
+++ b/src/Assets/Security/Auth/System/Password.html
@@ -1,28 +1,30 @@
-<form method="post" class="form-vertical" action="/login">
-    <div class="control-group">
-        <label class="control-label" for="EMail"><l>User.Entity:<call>Determinant</call></l>:</label>
-        <div class="controls">
-            <input class="col-md-6" id="Determinant" type="text" name="<call>Determinant</call>" value="" required="required" autofocus="autofocus"/>
-            &nbsp;
-            <a class="register" href="/join">Регистрация</a>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        Укажите данные аккаунта <call>Project.Title</call>
+    </div>
+    <div class="panel-body">
+        <form role="form" method="post" action="/login">
+            <div class="form-group">
+                <label for="EMail"><l>User.Entity:<call>Determinant</call></l>:</label>
+                <input class="form-control input-lg" id="Determinant" type="text" name="<call>Determinant</call>" value="" required="required" autofocus="autofocus"/>
+                <div class="help-block">
+                <a href="/join">Регистрация</a>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="Password">Пароль:</label>
+                <input class="form-control input-lg" id="Password" type="password" name="Password" value="" placeholder="Пароль" required="required" />
 
-        </div>
-    </div>
-    <div class="control-group">
-        <label class="control-label" for="Password">Пароль:</label>
-        <div class="controls">
-            <input class="col-md-6" id="Password" type="password" name="Password" value="" placeholder="Пароль" required="required" />
-            &nbsp;
+                <div class="help-block">
                 <a class="forgot" href="/forgot">Забыли пароль?</a>
-        </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="checkbox" for="TTL"><input type="checkbox" name="Remember" id="TTL" value="Long"> Запомнить меня</label>
+            </div>
+
+            <button type="submit" class="btn btn-success">Войти</button>
+        </form>
     </div>
-    <div class="control-group">
-        <div class="controls">
-            <label class="checkbox" for="TTL"><input type="checkbox" name="Remember" id="TTL" value="Long"> Запомнить меня</label>
-        </div>
-    </div>
-    <div class="form-actions">
-        <button type="submit" class="btn btn-success">Войти</button>
-        <button type="reset" class="btn">Отмена</button>
-    </div>
-</form>
+</div>
