--- a/src/Assets/User/Reset/Form.html
+++ b/src/Assets/User/Reset/Form.html
@@ -1,6 +1,6 @@
 <h2 class="page-header">Восстановление пароля</h2>
 <form class="form-horizontal" action="" method="post">
-    <div class="control-group">
+    <div class="form-group">
         <div class="control-label">EMail</div>
         <div class="controls">
             <input type="email" name="EMail" autofocus required />
