--- a/src/Assets/bootstrap3/Widgets/Form/Password/One.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Password/One.html
@@ -1,12 +1,10 @@
 <div class="form-group">
-    <label class="control-label" for="<k>ID</k>">
+    <label for="<k>ID</k>">
         <l><k>Label</k></l>:
 
         <if value="<k>Required</k>" eq="required"><span class="required-star">*</span></if>
 
         <if value="<k>Filled</k>" eq="1"><span class="filled-star" title="Рекомендуемое поле">*</span></if>
     </label>
-    <div class="controls">
-        <k>HTML</k>
-    </div>
+    <k>HTML</k>
 </div>
