--- a/src/Assets/bootstrap3/Widgets/Form/File.html
+++ b/src/Assets/bootstrap3/Widgets/Form/File.html
@@ -1,6 +1,5 @@
 <div class="form-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l> :</label>
-    <div class="controls">
+    <label for="<k>Name</k>"> <l><k>Label</k></l> :</label>
         <input type="file" name="<k>Name</k>"
             <block>required="<k>Required</k>"</block>
             class="form-control"
@@ -9,14 +8,12 @@
         <block>Максимальный размер: <k>MaxSize</k></block>
         <block><br/>Разрешённые типы: <k>TypeHint</k></block>
 
-            <if value="<k>Value</k>" neq="">
-                <small>
-                    <file>/uploads/<k>Scope</k>/<k>Value</k></file>
-                    <label class="checkbox">
-                        <input type="checkbox" name="<k>Name</k>" value="-1" /> Удалить
-                    </label>
-                </small>
-            </if>
-
-    </div>
+        <if value="<k>Value</k>" neq="">
+            <small>
+                <file>/uploads/<k>Scope</k>/<k>Value</k></file>
+                <label class="checkbox">
+                    <input type="checkbox" name="<k>Name</k>" value="-1" /> Удалить
+                </label>
+            </small>
+        </if>
 </div>
