--- a/src/Assets/User/Reset/Form.html
+++ b/src/Assets/User/Reset/Form.html
@@ -1,12 +1,8 @@
 <h2 class="page-header">Восстановление пароля</h2>
 <form class="form-horizontal" action="" method="post">
     <div class="form-group">
-        <div class="control-label">EMail</div>
-        <div class="controls">
-            <input type="email" name="EMail" autofocus required />
-        </div>
+        <label for="EMail">EMail</label>
+            <input class="form-control" id="EMail" type="email" name="EMail" autofocus required />
     </div>
-    <div class="form-actions">
-        <input class="btn btn-danger" type="submit" value="Сбросить"/>
-    </div>
+    <input class="btn btn-danger" type="submit" value="Сбросить"/>
 </form>
