--- a/src/Assets/User/Control/Show/Full.html
+++ b/src/Assets/User/Control/Show/Full.html
@@ -3,9 +3,7 @@
         <div class="row">
             <div class="col-md-1">
                 <thumb>
-                    <URL>
-                        <k>Avatar</k>
-                    </URL>
+                    <URL><k>Avatar</k></URL>
                     <Width>100</Width>
                     <Class>img img-responsive</Class>
                 </thumb>
@@ -17,9 +15,7 @@
                 <h4>
                     <k>Location</k>
                     ,
-                    <entity>Country:
-                        <k>Country</k>
-                    </entity>
+                    <entity>Country:<k>Country</k></entity>
                 </h4>
             </div>
         </div>
