--- a/src/Assets/User/Control/Show/Full.html
+++ b/src/Assets/User/Control/Show/Full.html
@@ -55,4 +55,12 @@
             <datetime><k>Created</k></datetime>
         </td>
     </tr>
+    <tr>
+        <th>
+            <l>User.Entity:Avatar</l>
+        </th>
+        <td>
+            <k>Avatar</k>
+        </td>
+    </tr>
 </table>
