--- a/src/Assets/User/Authenticate/Logged.html
+++ b/src/Assets/User/Authenticate/Logged.html
@@ -6,3 +6,12 @@
         </div>
     </div>
 </div>
+<div class="container">
+    <exec>
+        <Service>Security.Auth.System.Loginza</Service>
+        <Method>Identificate</Method>
+        <Call>
+            <Host><call>Host</call></Host>
+        </Call>
+    </exec>
+</div>
