--- a/src/Assets/Session/Show/Cabinet.app.html
+++ b/src/Assets/Session/Show/Cabinet.app.html
@@ -1,4 +1,4 @@
-<ul class="nav pull-right">
+<ul class="nav navbar-nav nav-cabinet pull-right">
     <li><a href="/login">Вход</a></li>
     <li><a href="/join">Регистрация</a></li>
 </ul>
