--- a/src/Assets/Comment/Control/Show/Short.html
+++ b/src/Assets/Comment/Control/Show/Short.html
@@ -1,20 +1,17 @@
-<tr><td>
-    <div class="pull-right">
-        <layout>Control.Pills:RUD</layout>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <a href="/comment/<k>ID</k>">Комментарий №<k>ID</k></a>
     </div>
-    <a href="/blog/<k>Slug</k>">
-        <h4><k>Title</k></h4>
-    </a>
-    <strong><l>Blog.Entity:Category</l>:</strong><br/>
-    <datetime><k>Created</k></datetime>
-    <a href="/blog/category/<k>Category</k>"><k>Category</k></a><br/>
-    <block>
-        <k>Words</k> слов
-    </block>
-    <block>
-        <k>Chars</k> знаков без пробелов
-    </block>
-    <block>
-        <k>Sickness</k>% тошноты.
-    </block>
-</td></tr>
+    <div class="panel-body">
+        <div class="pull-right">
+            <layout>Control.Pills:RUD</layout>
+        </div>
+        <cut words="10">
+            <k>Body</k>
+        </cut>
+    </div>
+    <div class="panel-footer">
+            <div class='pull-right'><datetime><k>Created</k></datetime></div>
+        <entity>User:<k>User</k></entity> на <entity><k>Entity</k>:<k>Object</k></entity>
+    </div>
+</div>
